# Lib90B

./: .gitignore  CMakeLists.txt  README.md
include/lib90b/: calc_stats.h  chi_square.h  collision.h  compression.h  entropy_tests.h  iid.h  lag.h  lrs.h  lz78y.h  markov.h  most_common.h  multi_mcw.h  multi_mmc.h  non_iid.h  permutation.h  t_tuple.h
src/iid/: calc_stats.cpp  chi_square.cpp  iid.cpp  permutation.cpp
src/non_iid/: collision.cpp  compression.cpp  lag.cpp  lz78y.cpp  markov.cpp  multi_mcw.cpp  multi_mmc.cpp  non_iid.cpp  t_tuple.cpp
src/shared/: most_common.cpp
src/shared/lrs/: lrs.cpp  lrs_algs.cpp  lrs_algs.h
tests/: CMakeLists.txt
tests/iid/: test_calc_stats.cpp  test_chi_square.cpp  test_iid.cpp  test_len_lrs.cpp  test_permutation.cpp
tests/non_iid/: test_collision.cpp  test_compression.cpp  test_lag.cpp  test_lz78y.cpp  test_markov.cpp  test_multi_mcw.cpp  test_multi_mmc.cpp  test_non_iid.cpp  test_t_tuple.cpp
tests/shared/: test_lrs.cpp  test_most_common.cpp
util/: TestRunUtils.h  utils.cpp  utils.h
